components/GameBox/components/GameBoxBig/gameboxbig.module.css
.card {
  width: 600px;
  height: 252px;
  display: grid;
  background-color: var(--bs-gray-100);
  grid-template-columns: 250px 60px 1fr 1fr 1fr;
  grid-template-rows: 4rem 1fr 1fr;
  grid-template-areas:
    "image info title title title"
    "image info status-own status-wanttoplay status-wishlist"
    "image info friends-own friends-wanttoplay friends-wishlist";

  @media screen and (max-width: 768px) {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 250px 60px 1fr 1fr 1fr 1fr;
    grid-template-areas:
      "image image"
      "title title"
      "info info"
      "status-own friends-own"
      "status-wanttoplay friends-wanttoplay"
      "status-wishlist friends-wishlist";

    gap: 0.25rem;
    width: 95vw;
    height: unset;
  }
}

.image {
  width: 250px;
  height: 250px;
  grid-area: image;
  object-fit: cover;
  @media screen and (max-width: 768px) {
    width: 100%;
    height: 100%;
  }
}

.name {
  grid-area: title;
  font-size: 1.25rem;
  line-height: 1.5rem;
  max-height: 3rem;
  overflow: hidden;
  font-weight: bold;
  margin: 0;
  padding: 0;
  justify-self: start;
  align-self: center;
  padding-left: 0.5rem;
  padding-right: 0.5rem;

  @media screen and (max-width: 768px) {
    justify-self: center;
  }
}

.name a {
  color: var(--bs-text);
  text-decoration: none;
}

.info {
  grid-area: info;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  border-right: 1px solid var(--bs-border-color);

  @media screen and (max-width: 768px) {
    flex-direction: row;
  }
}

.metricDivider {
  width: 80%;
  margin: 0;

  @media screen and (max-width: 768px) {
    display: none;
  }
}

.metricTitle {
  font-size: 1.25rem;
  text-align: center;
  font-weight: normal;
}

.metricLabel {
  font-size: 0.6rem;
  text-align: center;
  color: var(--bs-light-text);
}

.myStatusOwn,
.myStatusWantToPlay,
.myStatusWishlist {
  border-top: 1px solid var(--bs-border-color);

  @media screen and (max-width: 768px) {
    border: 0;
  }
}

.myStatusOwn {
  grid-area: status-own;
}

.myStatusWantToPlay {
  grid-area: status-wanttoplay;
}

.myStatusWishlist {
  grid-area: status-wishlist;
}

.friendStatusOwn {
  grid-area: friends-own;
}

.friendStatusWantToPlay {
  grid-area: friends-wanttoplay;
}

.friendStatusWishlist {
  grid-area: friends-wishlist;
}

.statusButton {
  font-size: 1.75rem;
  place-self: center stretch;
}

.statusText {
  font-size: 0.7rem;
  text-align: center;
  font-weight: lighter;
}

.statusFriends {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  grid-area: "friends";
}

